# unify-llm

./: .dockerignore  .env.example  .env.gateway.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  N8N_FEATURES_SUMMARY.md  README.md  docker-compose.yml  pyproject.toml
.claude/: api-reference.md  architecture.md  coding-standards.md  development.md
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml  release.yml
configs/: config.example.yaml  gateway.yaml  model_name_mapping.yaml  settings.yaml
docs/: AI_AGENT_GUIDE.md  AI_AGENT_QUICK_REF.md  ARCHITECTURE.md  DATABRICKS_AGENT_GUIDE.md  MCP_A2A_GUIDE.md  N8N_STYLE_FEATURES.md  deploy.md
docs/adr/: 0001-record-architecture-decisions.md  0002-gateway-on-core-slice-legacy-isolated.md  0003-models-as-single-openai-schema.md  0004-src-layout-hatchling-uv-py313.md  0005-one-command-gate-and-ratchet.md  0006-ports-protocol-and-factory-seam.md  0007-mock-default-production-hard-fail.md  0008-openai-compatible-family-data-registry.md  0009-core-leaf-and-beartype-hook.md  0010-openai-error-envelope-and-shared-http-client.md
examples/: agent_advanced.py  agent_basic.py  agent_n8n_style.py  async_usage.py  basic_usage.py  streaming.py
scripts/: async_usage.py  basic_usage.py  example_bytedance.py  example_langchain_adapter.py  example_qwen.py  final_validation.py  multi_provider.py  openai_demo.py  quick_reference.py  streaming.py  test_all_providers.py  test_databricks.py  test_new_features.py  verify_unified_interface.py
scripts/examples/: README.md  agent_advanced.py  agent_basic.py  agent_custom_tools.py  agent_n8n_style.py  agent_workflow.py  demo_end_to_end.py  mcp_client_integration.py  mcp_server_filesystem.py  mystery_novel_multiagent.py  quickstart_mcp_a2a.py  test_agent_databricks.py
src/: __init__.py  client.py  langchain_adapter.py  models.py  utils.py
src/a2a/: __init__.py  agent_comm.py  collaboration.py  message_bus.py  protocol.py
src/agent/: __init__.py  advanced.py  base.py  builtin_tools.py  execution_history.py  executor.py  extended_tools.py  http_tools.py  memory.py  monitoring.py  templates.py  tools.py  triggers.py  visualization.py  webhook_server.py  workflow.py
src/core/: __init__.py  config.py  logger.py
src/mcp/: __init__.py  client.py  protocol.py  server.py  transport.py
src/providers/: __init__.py  anthropic.py  anthropic_openai.py  base.py  bytedance.py  databricks.py  gemini.py  grok.py  ollama.py  openai.py  openrouter.py  qwen.py
src/unify_llm/: __init__.py  client.py  models.py  utils.py
src/unify_llm/adapters/: __init__.py  anthropic.py  anthropic_openai.py  base.py  databricks.py  gemini.py  mock.py  ollama.py  openai_compatible.py  qwen.py
src/unify_llm/core/: __init__.py  config.py  exceptions.py  logger.py  logging.py  settings.py
src/unify_llm/gateway/: __init__.py  app.py  auth.py  config.py  errors.py  ratelimit.py  ratelimit_redis.py  router.py
src/unify_llm/ports/: __init__.py  factory.py  llm.py
src/unify_llm/providers/: __init__.py  base.py  openai.py  openrouter.py
tests/: __init__.py  conftest.py  test_agent_integration.py  test_basic.py  test_conformance.py  test_conversion_core.py  test_coverage_improvement.py  test_gateway.py  test_mcp_a2a_databricks.py  test_smoke.py
tests/security/: __init__.py  test_code_injection.py  test_path_traversal.py  test_ssrf.py  test_webhook_auth.py
unify_llm/: __init__.py  client.py  exceptions.py  langchain_adapter.py  models.py  utils.py
unify_llm/agent/: __init__.py  advanced.py  base.py  builtin_tools.py  execution_history.py  executor.py  extended_tools.py  http_tools.py  memory.py  monitoring.py  templates.py  tools.py  triggers.py  visualization.py  webhook_server.py  workflow.py
unify_llm/core/: __init__.py  config.py  db_config.py  logger.py
unify_llm/providers/: __init__.py  anthropic.py  anthropic_openai.py  base.py  bytedance.py  databricks.py  gemini.py  grok.py  ollama.py  openai.py  openrouter.py  qwen.py
