[project]
name = "unify-llm"
version = "0.1.1"
description = "A unified interface for calling various Large Language Model APIs"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [{name = "UnifyLLM Team"}]
keywords = ["llm", "openai", "anthropic", "gemini", "ollama", "unified-api"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.11.0",
    "httpx>=0.24.0",
    "tenacity>=8.0.0",
    "typing-extensions>=4.5.0",
    "pyyaml>=6.0.3",
    "python-dotenv>=1.2.1",
    "beartype>=0.18.0",
    # 网关已是核心交付(Phase 4):mypy src 需对 gateway/ 全严类型检查,故进主依赖。
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
]

[project.optional-dependencies]
# 未来调度才需要的死重;核心不该拉,装了才用。
agent = ["croniter>=2.0.0"]
# 生产水平扩展用的网关限流/预算后端;不装则只用内存后端(默认)。
redis = ["redis>=5.0.0"]

[dependency-groups]
# 开发工具走 PEP 735 group:uv `sync` 默认安装、`uv run` 默认保留
# (extra 在 `uv run` 下会被默认 sync 移除,group 不会),比 extra 更稳。
dev = [
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "hypothesis>=6.0.0",
    # redis-py 自带类型提示:让 `mypy src` 能对可选 Redis 后端严格类型检查(测试不连真 Redis)。
    "redis>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/unifyllm/unifyllm"
Documentation = "https://unifyllm.readthedocs.io"
Repository = "https://github.com/unifyllm/unifyllm"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/unify_llm"]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]
# ── RATCHET ──: 存量模块/测试/脚本尚未现代化(from __future__ + 老 typing),整体放行。
# Phase 3 已把全部 9 个 provider 重构进现代化的 src/unify_llm/adapters/(ports/factory/Mock +
# OpenAI 兼容族合并),连同 ports/、转换核心一并受全严;仅剩 agent/mcp/a2a/langchain 仍豁免,
# 留后续阶段逐模块现代化后移除。
extend-exclude = [
    "src/unify_llm/agent",
    "src/unify_llm/mcp",
    "src/unify_llm/a2a",
    "src/unify_llm/langchain_adapter.py",
    "tests/test_basic.py",
    "tests/test_agent_integration.py",
    "tests/test_coverage_improvement.py",
    "tests/test_mcp_a2a_databricks.py",
    "tests/security",
    "scripts",
    "notebooks",
    "docs",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "ANN", "B", "SIM", "RUF"]

[tool.ruff.format]

[tool.mypy]
python_version = "3.13"
strict = true
warn_unreachable = true
warn_return_any = true
warn_unused_configs = true
mypy_path = "src"
explicit_package_bases = true

# ── RATCHET ──: 存量模块从严格类型门豁免。Phase 3 已把 9 个 provider 现代化进 adapters/ 并受
# mypy --strict;仅剩 agent/mcp/a2a/langchain 继续豁免,逐模块现代化后再移出。
[[tool.mypy.overrides]]
module = [
    "unify_llm.agent.*",
    "unify_llm.mcp.*",
    "unify_llm.a2a.*",
    "unify_llm.langchain_adapter",
]
ignore_errors = true

[tool.pytest.ini_options]
addopts = "-q --import-mode=importlib --cov=unify_llm --cov-report=term-missing"
testpaths = ["tests"]
python_files = ["test_*.py"]
filterwarnings = ["error"]
markers = [
    "integration: marks tests as integration tests that call real LLM APIs",
    "slow: marks tests as slow",
]
